// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CheckBox checked renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px #7D4CDB;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c6 {
  box-sizing: border-box;
  stroke-width: 4px;
  stroke: #7D4CDB;
  width: 24px;
  height: 24px;
}

.c1 {
  display: flex;
  flex-direction: row;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c1:hover input:not([disabled])+div,
.c1:hover input:not([disabled])+span {
  border-color: #000000;
}

.c4 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c4:checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c3 {
  flex-shrink: 0;
}

@media only screen and (max-width: 768px) {
  .c5 {
    border: solid 2px #7D4CDB;
  }
}

<div
  class="c0"
>
  <label
    class="c1"
    for="_r_9_"
  >
    <div
      class="c2 c3"
    >
      <input
        checked=""
        class="c4"
        id="_r_9_"
        type="checkbox"
      />
      <div
        class="c5 "
      >
        <svg
          class="c6"
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 24 24"
        >
          <path
            d="M6,11.3 L10.3,16 L18,6.2"
            fill="none"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`CheckBox controlled 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px #7D4CDB;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c6 {
  box-sizing: border-box;
  stroke-width: 4px;
  stroke: #7D4CDB;
  width: 24px;
  height: 24px;
}

.c1 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c1:hover input:not([disabled])+div,
.c1:hover input:not([disabled])+span {
  border-color: #000000;
}

.c4 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c4:checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c3 {
  flex-shrink: 0;
}

@media only screen and (max-width: 768px) {
  .c2 {
    margin-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c5 {
    border: solid 2px #7D4CDB;
  }
}

<div
  class="c0"
>
  <label
    class="c1"
    for="_r_n_"
  >
    <div
      class="c2 c3"
    >
      <input
        checked=""
        class="c4"
        id="_r_n_"
        type="checkbox"
      />
      <div
        class="c5 "
      >
        <svg
          class="c6"
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 24 24"
        >
          <path
            d="M6,11.3 L10.3,16 L18,6.2"
            fill="none"
          />
        </svg>
      </div>
    </div>
    <span>
      test-label
    </span>
  </label>
</div>
`;

exports[`CheckBox controlled 2`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 eVypbb"
>
  <label
    class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 dOWXkA"
    for="_r_n_"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 krZJuA StyledCheckBox-sc-1dbk5ju-6 fXQYEo"
    >
      <input
        checked=""
        class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dEyzxY"
        id="_r_n_"
        type="checkbox"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 kAPuez StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 glAFuy"
      >
        <svg
          class="StyledCheckBox__StyledCheckBoxIcon-sc-1dbk5ju-0 dpEGpq"
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 24 24"
        >
          <path
            d="M6,11.3 L10.3,16 L18,6.2"
            fill="none"
          />
        </svg>
      </div>
    </div>
    <span>
      test-label
    </span>
  </label>
</div>
`;

exports[`CheckBox custom theme 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px rgba(0, 0, 0, 0.15);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c1 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
  cursor: pointer;
}

.c1:hover input:not([disabled])+div,
.c1:hover input:not([disabled])+span {
  border-color: #000000;
}

.c4 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c4:checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c3 {
  flex-shrink: 0;
}

@media only screen and (max-width: 768px) {
  .c2 {
    margin-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c5 {
    border: solid 2px rgba(0, 0, 0, 0.15);
  }
}

<div
  class="c0"
>
  <label
    class="c1"
    for="_r_o_"
  >
    <div
      class="c2 c3"
    >
      <input
        class="c4"
        id="_r_o_"
        type="checkbox"
      />
      <div
        class="c5 "
      />
    </div>
    <span>
      test-label
    </span>
  </label>
</div>
`;

exports[`CheckBox defaultChecked 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px #7D4CDB;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c6 {
  box-sizing: border-box;
  stroke-width: 4px;
  stroke: #7D4CDB;
  width: 24px;
  height: 24px;
}

.c1 {
  display: flex;
  flex-direction: row;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c1:hover input:not([disabled])+div,
.c1:hover input:not([disabled])+span {
  border-color: #000000;
}

.c4 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c4:checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c3 {
  flex-shrink: 0;
}

@media only screen and (max-width: 768px) {
  .c5 {
    border: solid 2px #7D4CDB;
  }
}

<div
  class="c0"
>
  <label
    class="c1"
    for="_r_a_"
  >
    <div
      class="c2 c3"
    >
      <input
        checked=""
        class="c4"
        id="_r_a_"
        type="checkbox"
      />
      <div
        class="c5 "
      >
        <svg
          class="c6"
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 24 24"
        >
          <path
            d="M6,11.3 L10.3,16 L18,6.2"
            fill="none"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`CheckBox disabled renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px rgba(0, 0, 0, 0.15);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px #7D4CDB;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c7 {
  box-sizing: border-box;
  stroke-width: 4px;
  stroke: #7D4CDB;
  width: 24px;
  height: 24px;
}

.c1 {
  display: flex;
  flex-direction: row;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  opacity: 0.5;
  cursor: default;
}

.c1:hover input:not([disabled])+div,
.c1:hover input:not([disabled])+span {
  border-color: #000000;
}

.c4 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
}

.c4:checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c3 {
  flex-shrink: 0;
}

@media only screen and (max-width: 768px) {
  .c5 {
    border: solid 2px rgba(0, 0, 0, 0.15);
  }
}

@media only screen and (max-width: 768px) {
  .c6 {
    border: solid 2px #7D4CDB;
  }
}

<div
  class="c0"
>
  <label
    class="c1"
    disabled=""
    for="_r_b_"
  >
    <div
      class="c2 c3"
      disabled=""
    >
      <input
        class="c4"
        disabled=""
        id="_r_b_"
        type="checkbox"
      />
      <div
        class="c5 "
        disabled=""
      />
    </div>
  </label>
  <label
    class="c1"
    disabled=""
    for="_r_c_"
  >
    <div
      class="c2 c3"
      disabled=""
    >
      <input
        checked=""
        class="c4"
        disabled=""
        id="_r_c_"
        type="checkbox"
      />
      <div
        class="c6 "
        disabled=""
      >
        <svg
          class="c7"
          disabled=""
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 24 24"
        >
          <path
            d="M6,11.3 L10.3,16 L18,6.2"
            fill="none"
          />
        </svg>
      </div>
      <input
        type="hidden"
        value="true"
      />
    </div>
  </label>
</div>
`;

exports[`CheckBox indeterminate renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px rgba(0, 0, 0, 0.15);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c6 {
  box-sizing: border-box;
  stroke-width: 4px;
  stroke: #7D4CDB;
  width: 24px;
  height: 24px;
}

.c1 {
  display: flex;
  flex-direction: row;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c1:hover input:not([disabled])+div,
.c1:hover input:not([disabled])+span {
  border-color: #000000;
}

.c7 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c7:hover input:not([disabled])+div,
.c7:hover input:not([disabled])+span {
  border-color: #000000;
}

.c4 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c4:checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c3 {
  flex-shrink: 0;
}

@media only screen and (max-width: 768px) {
  .c5 {
    border: solid 2px rgba(0, 0, 0, 0.15);
  }
}

@media only screen and (max-width: 768px) {
  .c8 {
    margin-right: 6px;
  }
}

<div
  class="c0"
>
  <label
    class="c1"
    for="_r_j_"
  >
    <div
      class="c2 c3"
    >
      <input
        class="c4"
        id="_r_j_"
        type="checkbox"
      />
      <div
        class="c5 "
      >
        <svg
          class="c6"
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 24 24"
        >
          <path
            d="M6,12 L18,12"
            fill="none"
          />
        </svg>
      </div>
    </div>
  </label>
  <label
    class="c7"
    for="_r_k_"
  >
    <div
      class="c8 c3"
    >
      <input
        class="c4"
        id="_r_k_"
        type="checkbox"
      />
      <div
        class="c5 "
      >
        <svg
          class="c6"
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 24 24"
        >
          <path
            d="M6,12 L18,12"
            fill="none"
          />
        </svg>
      </div>
    </div>
    <span>
      test label
    </span>
  </label>
</div>
`;

exports[`CheckBox label renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px rgba(0, 0, 0, 0.15);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c1 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c1:hover input:not([disabled])+div,
.c1:hover input:not([disabled])+span {
  border-color: #000000;
}

.c6 {
  display: flex;
  flex-direction: row;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c6:hover input:not([disabled])+div,
.c6:hover input:not([disabled])+span {
  border-color: #000000;
}

.c4 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c4:checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c3 {
  flex-shrink: 0;
}

@media only screen and (max-width: 768px) {
  .c2 {
    margin-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c5 {
    border: solid 2px rgba(0, 0, 0, 0.15);
  }
}

<div
  class="c0"
>
  <label
    class="c1"
    for="_r_7_"
  >
    <div
      class="c2 c3"
    >
      <input
        class="c4"
        id="_r_7_"
        type="checkbox"
      />
      <div
        class="c5 "
      />
    </div>
    <span>
      test label
    </span>
  </label>
  <label
    class="c6"
    for="_r_8_"
  >
    <div
      class="c2 c3"
    >
      <input
        class="c4"
        id="_r_8_"
        type="checkbox"
      />
      <div
        class="c5 "
      />
    </div>
    <div>
      test label
    </div>
  </label>
</div>
`;

exports[`CheckBox label should not have accessibility violations 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px rgba(0, 0, 0, 0.15);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c1 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c1:hover input:not([disabled])+div,
.c1:hover input:not([disabled])+span {
  border-color: #000000;
}

.c4 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c4:checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c3 {
  flex-shrink: 0;
}

@media only screen and (max-width: 768px) {
  .c2 {
    margin-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c5 {
    border: solid 2px rgba(0, 0, 0, 0.15);
  }
}

<div
  class="c0"
>
  <label
    class="c1"
    for="_r_1_"
  >
    <div
      class="c2 c3"
    >
      <input
        class="c4"
        id="_r_1_"
        type="checkbox"
      />
      <div
        class="c5 "
      />
    </div>
    <span>
      test
    </span>
  </label>
</div>
`;

exports[`CheckBox renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px rgba(0, 0, 0, 0.15);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c1 {
  display: flex;
  flex-direction: row;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c1:hover input:not([disabled])+div,
.c1:hover input:not([disabled])+span {
  border-color: #000000;
}

.c4 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c4:checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c3 {
  flex-shrink: 0;
}

@media only screen and (max-width: 768px) {
  .c5 {
    border: solid 2px rgba(0, 0, 0, 0.15);
  }
}

<div
  class="c0"
>
  <label
    class="c1"
    for="_r_2_"
  >
    <div
      class="c2 c3"
    >
      <input
        class="c4"
        id="_r_2_"
        type="checkbox"
      />
      <div
        class="c5 "
      />
    </div>
  </label>
  <label
    class="c1"
    for="test id"
  >
    <div
      class="c2 c3"
    >
      <input
        class="c4"
        id="test id"
        name="test name"
        type="checkbox"
      />
      <div
        class="c5 "
      />
    </div>
  </label>
</div>
`;

exports[`CheckBox renders a11yTitle and aria-label 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px rgba(0, 0, 0, 0.15);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c1 {
  display: flex;
  flex-direction: row;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c1:hover input:not([disabled])+div,
.c1:hover input:not([disabled])+span {
  border-color: #000000;
}

.c4 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c4:checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c3 {
  flex-shrink: 0;
}

@media only screen and (max-width: 768px) {
  .c5 {
    border: solid 2px rgba(0, 0, 0, 0.15);
  }
}

<div
  class="c0"
>
  <label
    class="c1"
    for="_r_q_"
  >
    <div
      class="c2 c3"
    >
      <input
        aria-label="Label"
        class="c4"
        id="_r_q_"
        type="checkbox"
      />
      <div
        class="c5 "
      />
    </div>
  </label>
  <label
    class="c1"
    for="_r_r_"
  >
    <div
      class="c2 c3"
    >
      <input
        aria-label="Label-2"
        class="c4"
        id="_r_r_"
        type="checkbox"
      />
      <div
        class="c5 "
      />
    </div>
  </label>
</div>
`;

exports[`CheckBox renders custom checked icon 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px #7D4CDB;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c1 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c1:hover input:not([disabled])+div,
.c1:hover input:not([disabled])+span {
  border-color: #000000;
}

.c4 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c4:checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c3 {
  flex-shrink: 0;
}

@media only screen and (max-width: 768px) {
  .c2 {
    margin-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c5 {
    border: solid 2px #7D4CDB;
  }
}

<div
  class="c0"
>
  <label
    class="c1"
    for="_r_p_"
  >
    <div
      class="c2 c3"
    >
      <input
        checked=""
        class="c4"
        id="_r_p_"
        type="checkbox"
      />
      <div
        class="c5 "
      >
        <svg
          data-testid="custom-checkBox-icon"
        />
      </div>
    </div>
    <span>
      test-label
    </span>
  </label>
</div>
`;

exports[`CheckBox renders without grommet wrapper 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px rgba(0, 0, 0, 0.15);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c0 {
  display: flex;
  flex-direction: row;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c0:hover input:not([disabled])+div,
.c0:hover input:not([disabled])+span {
  border-color: #000000;
}

.c3 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c3:checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c2 {
  flex-shrink: 0;
}

@media only screen and (max-width: 768px) {
  .c4 {
    border: solid 2px rgba(0, 0, 0, 0.15);
  }
}

<label
  class="c0"
  for="_r_6_"
>
  <div
    class="c1 c2"
  >
    <input
      class="c3"
      id="_r_6_"
      type="checkbox"
    />
    <div
      class="c4 "
    />
  </div>
</label>
`;

exports[`CheckBox reverse renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-left: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px rgba(0, 0, 0, 0.15);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c1 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c1:hover input:not([disabled])+div,
.c1:hover input:not([disabled])+span {
  border-color: #000000;
}

.c4 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c4:checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c3 {
  flex-shrink: 0;
}

@media only screen and (max-width: 768px) {
  .c2 {
    margin-left: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c5 {
    border: solid 2px rgba(0, 0, 0, 0.15);
  }
}

<div
  class="c0"
>
  <label
    class="c1"
    for="_r_d_"
  >
    <span>
      test label
    </span>
    <div
      class="c2 c3"
    >
      <input
        class="c4"
        id="_r_d_"
        type="checkbox"
      />
      <div
        class="c5 "
      />
    </div>
  </label>
</div>
`;

exports[`CheckBox reverse toggle fill 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-left: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c1 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  -webkit-user-select: none;
  width: auto;
  height: 100%;
  max-width: none;
  flex: 1 0 auto;
  justify-content: space-between;
  cursor: pointer;
}

.c1:hover input:not([disabled])+div,
.c1:hover input:not([disabled])+span {
  border-color: #000000;
}

.c4 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c4:checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c5 {
  box-sizing: border-box;
  vertical-align: middle;
  display: inline-block;
  width: 48px;
  height: 24px;
  border: 2px solid;
  border-color: rgba(0, 0, 0, 0.15);
  border-radius: 24px;
  background-color: transparent;
}

.c6 {
  box-sizing: border-box;
  position: relative;
  display: inherit;
  top: -2px;
  left: -2px;
  transition: all 0.3s;
  width: 24px;
  height: 24px;
  background: #d9d9d9;
  border-radius: 24px;
}

.c3 {
  flex-shrink: 0;
}

@media only screen and (max-width: 768px) {
  .c2 {
    margin-left: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c7 {
    margin-right: 6px;
  }
}

<div
  class="c0"
>
  <label
    class="c1"
    for="_r_h_"
  >
    <span>
      test label
    </span>
    <div
      class="c2 c3"
    >
      <input
        class="c4"
        id="_r_h_"
        type="checkbox"
      />
      <span
        class="c5"
      >
        <span
          class="c6"
        />
      </span>
    </div>
  </label>
  <label
    class="c1"
    for="_r_i_"
  >
    <div
      class="c7 c3"
    >
      <input
        class="c4"
        id="_r_i_"
        type="checkbox"
      />
      <span
        class="c5"
      >
        <span
          class="c6"
        />
      </span>
    </div>
    <span>
      test label
    </span>
  </label>
</div>
`;

exports[`CheckBox should not have accessibility violations 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px rgba(0, 0, 0, 0.15);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c1 {
  display: flex;
  flex-direction: row;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c1:hover input:not([disabled])+div,
.c1:hover input:not([disabled])+span {
  border-color: #000000;
}

.c4 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c4:checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c3 {
  flex-shrink: 0;
}

@media only screen and (max-width: 768px) {
  .c5 {
    border: solid 2px rgba(0, 0, 0, 0.15);
  }
}

<div
  class="c0"
>
  <label
    class="c1"
    for="_r_0_"
  >
    <div
      class="c2 c3"
    >
      <input
        aria-label="test"
        class="c4"
        id="_r_0_"
        type="checkbox"
      />
      <div
        class="c5 "
      />
    </div>
  </label>
</div>
`;

exports[`CheckBox theme gap 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 48px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px rgba(0, 0, 0, 0.15);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-left: 48px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c1 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c1:hover input:not([disabled])+div,
.c1:hover input:not([disabled])+span {
  border-color: #000000;
}

.c4 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c4:checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c7 {
  box-sizing: border-box;
  vertical-align: middle;
  display: inline-block;
  width: 48px;
  height: 24px;
  border: 2px solid;
  border-color: rgba(0, 0, 0, 0.15);
  border-radius: 24px;
  background-color: transparent;
}

.c8 {
  box-sizing: border-box;
  position: relative;
  display: inherit;
  top: -2px;
  left: -2px;
  transition: all 0.3s;
  width: 24px;
  height: 24px;
  background: #d9d9d9;
  border-radius: 24px;
}

.c3 {
  flex-shrink: 0;
}

@media only screen and (max-width: 768px) {
  .c2 {
    margin-right: 24px;
  }
}

@media only screen and (max-width: 768px) {
  .c5 {
    border: solid 2px rgba(0, 0, 0, 0.15);
  }
}

@media only screen and (max-width: 768px) {
  .c6 {
    margin-left: 24px;
  }
}

<div
    class="c0"
  >
    <label
      class="c1"
      for="_r_s_"
    >
      <div
        class="c2 c3"
      >
        <input
          class="c4"
          id="_r_s_"
          type="checkbox"
        />
        <div
          class="c5 "
        />
      </div>
      <span>
        test label
      </span>
    </label>
    <label
      class="c1"
      for="_r_t_"
    >
      <span>
        test label
      </span>
      <div
        class="c6 c3"
      >
        <input
          class="c4"
          id="_r_t_"
          type="checkbox"
        />
        <div
          class="c5 "
        />
      </div>
    </label>
    <label
      class="c1"
      for="_r_u_"
    >
      <div
        class="c2 c3"
      >
        <input
          class="c4"
          id="_r_u_"
          type="checkbox"
        />
        <span
          class="c7"
        >
          <span
            class="c8"
          />
        </span>
      </div>
      <span>
        test label
      </span>
    </label>
  </div>
</DocumentFragment>
`;

exports[`CheckBox toggle renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c1 {
  display: flex;
  flex-direction: row;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c1:hover input:not([disabled])+div,
.c1:hover input:not([disabled])+span {
  border-color: #000000;
}

.c7 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c7:hover input:not([disabled])+div,
.c7:hover input:not([disabled])+span {
  border-color: #000000;
}

.c4 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c4:checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c5 {
  box-sizing: border-box;
  vertical-align: middle;
  display: inline-block;
  width: 48px;
  height: 24px;
  border: 2px solid;
  border-color: rgba(0, 0, 0, 0.15);
  border-radius: 24px;
  background-color: transparent;
}

.c6 {
  box-sizing: border-box;
  position: relative;
  display: inherit;
  top: -2px;
  left: -2px;
  transition: all 0.3s;
  width: 24px;
  height: 24px;
  background: #d9d9d9;
  border-radius: 24px;
}

.c3 {
  flex-shrink: 0;
}

@media only screen and (max-width: 768px) {
  .c8 {
    margin-right: 6px;
  }
}

<div
  class="c0"
>
  <label
    class="c1"
    for="_r_e_"
  >
    <div
      class="c2 c3"
    >
      <input
        class="c4"
        id="_r_e_"
        type="checkbox"
      />
      <span
        class="c5"
      >
        <span
          class="c6"
        />
      </span>
    </div>
  </label>
  <label
    class="c1"
    for="_r_f_"
  >
    <div
      class="c2 c3"
    >
      <input
        checked=""
        class="c4"
        id="_r_f_"
        type="checkbox"
      />
      <span
        class="c5"
      >
        <span
          class="c6"
        />
      </span>
    </div>
  </label>
  <label
    class="c7"
    for="_r_g_"
  >
    <div
      class="c8 c3"
    >
      <input
        class="c4"
        id="_r_g_"
        type="checkbox"
      />
      <span
        class="c5"
      >
        <span
          class="c6"
        />
      </span>
    </div>
    <span>
      test label
    </span>
  </label>
</div>
`;
